# TDT4295

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml
assets/: spleen-lg.bdf
example_for_test/: example.c  example.h
examples/: image_widget_example.c
lib/game/: CMakeLists.txt
lib/game/include/: a_char.h  d_char.h  e_char.h  game.h  game_page.h  i_char.h  k_char.h  l_char.h  menu.h  menu_page.h  s_char.h  skidaddle.h
lib/game/src/: game.c  game_page.c  menu.c  menu_page.c
lib/game_logic/: CMakeLists.txt  Makefile
lib/game_logic/include/: brushstroke.h  drawing.h  game_query.h
lib/game_logic/src/: drawing.c  game_query.c  main.c
lib/gui/: CMakeLists.txt
lib/gui/include/: asbjorn.h  color.h  font.h  font_types.h  framebuffer.h  text.h
lib/gui/include/primitives/: image.h  rectangle.h  text.h
lib/gui/include/widgets/: button.h  canvas.h  container.h  grid.h  hbox.h  image_widget.h  label.h  vbox.h  widget.h
lib/gui/src/: framebuffer.c  image.c  rectangle.c  text.c
lib/gui/src/primitives/: image.c  rectangle.c  text.c
lib/gui/src/widgets/: button.c  canvas.c  container.c  grid.c  hbox.c  image_widget.c  label.c  vbox.c  widget.c
platform/desktop/: CMakeLists.txt
platform/desktop/include/: font.h
platform/desktop/src/: main.c
platform/nucleo_dev_board/: .cproject  .mxproject  .project  nucleo64-intro Debug.launch  nucleo64-intro-with-rtos Debug.launch  nucleo64-intro-with-rtos.ioc
platform/nucleo_dev_board/Core/Inc/: FreeRTOSConfig.h  app_freertos.h  main.h  stm32u5xx_hal_conf.h  stm32u5xx_it.h  stm32u5xx_nucleo_conf.h
platform/nucleo_dev_board/Core/Src/: app_freertos.c  main.c  stm32u5xx_hal_msp.c  stm32u5xx_hal_timebase_tim.c  stm32u5xx_it.c  syscalls.c  sysmem.c  system_stm32u5xx.c
platform/nucleo_dev_board/Drivers/BSP/STM32U5xx_Nucleo/: stm32u5xx_nucleo.c  stm32u5xx_nucleo.h  stm32u5xx_nucleo_errno.h
platform/nucleo_dev_board/Drivers/CMSIS/Device/ST/STM32U5xx/Include/: stm32u545xx.h  stm32u5xx.h  system_stm32u5xx.h
platform/nucleo_dev_board/Drivers/CMSIS/Include/: cachel1_armv7.h  cmsis_armcc.h  cmsis_armclang.h  cmsis_armclang_ltm.h  cmsis_gcc.h  cmsis_iccarm.h  cmsis_version.h  core_armv81mml.h  core_armv8mbl.h  core_armv8mml.h  core_cm0.h  core_cm0plus.h  core_cm1.h  core_cm23.h  core_cm3.h  core_cm33.h  core_cm35p.h  core_cm4.h  core_cm55.h  core_cm7.h  core_cm85.h  core_sc000.h  core_sc300.h  core_starmc1.h  mpu_armv7.h  mpu_armv8.h  pac_armv81.h  pmu_armv8.h
platform/nucleo_dev_board/Drivers/STM32U5xx_HAL_Driver/Inc/: stm32u5xx_hal.h  stm32u5xx_hal_cortex.h  stm32u5xx_hal_def.h  stm32u5xx_hal_dma.h  stm32u5xx_hal_dma_ex.h  stm32u5xx_hal_exti.h  stm32u5xx_hal_flash.h  stm32u5xx_hal_flash_ex.h  stm32u5xx_hal_gpio.h  stm32u5xx_hal_gpio_ex.h  stm32u5xx_hal_gtzc.h  stm32u5xx_hal_i2c.h  stm32u5xx_hal_i2c_ex.h  stm32u5xx_hal_icache.h  stm32u5xx_hal_pwr.h  stm32u5xx_hal_pwr_ex.h  stm32u5xx_hal_rcc.h  stm32u5xx_hal_rcc_ex.h  stm32u5xx_hal_tim.h  stm32u5xx_hal_tim_ex.h  stm32u5xx_hal_uart.h  stm32u5xx_hal_uart_ex.h  stm32u5xx_hal_usart.h  stm32u5xx_hal_usart_ex.h  stm32u5xx_ll_bus.h  stm32u5xx_ll_cortex.h  stm32u5xx_ll_crs.h  stm32u5xx_ll_dma.h  stm32u5xx_ll_exti.h  stm32u5xx_ll_gpio.h  stm32u5xx_ll_icache.h  stm32u5xx_ll_pwr.h  stm32u5xx_ll_rcc.h  stm32u5xx_ll_system.h  stm32u5xx_ll_utils.h
platform/nucleo_dev_board/Drivers/STM32U5xx_HAL_Driver/Inc/Legacy/: stm32_hal_legacy.h
platform/nucleo_dev_board/Drivers/STM32U5xx_HAL_Driver/Src/: stm32u5xx_hal.c  stm32u5xx_hal_cortex.c  stm32u5xx_hal_dma.c  stm32u5xx_hal_dma_ex.c  stm32u5xx_hal_exti.c  stm32u5xx_hal_flash.c  stm32u5xx_hal_flash_ex.c  stm32u5xx_hal_gpio.c  stm32u5xx_hal_gtzc.c  stm32u5xx_hal_i2c.c  stm32u5xx_hal_i2c_ex.c  stm32u5xx_hal_icache.c  stm32u5xx_hal_pwr.c  stm32u5xx_hal_pwr_ex.c  stm32u5xx_hal_rcc.c  stm32u5xx_hal_rcc_ex.c  stm32u5xx_hal_tim.c  stm32u5xx_hal_tim_ex.c  stm32u5xx_hal_uart.c  stm32u5xx_hal_uart_ex.c  stm32u5xx_hal_usart.c  stm32u5xx_hal_usart_ex.c
test/: CMakeLists.txt  Makefile  test_alignment_justify.c  test_button.c  test_button_dirty.c  test_canvas.c  test_container.c  test_container_dirty.c  test_container_edge_cases.c  test_container_layout.c  test_example.c  test_game.c  test_game_logic.c  test_grid_layout.c  test_label.c  test_widget.c
test/game/: test_game.c  test_game_page.c  test_menu_page.c
tools/: bdf2c.py  bmp2c.py  gaussian2c.py
